[package]
name = "core"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leveldb = "0.8"
chrono = "0.4"
utils = {path = "../utils"}
serde = { version = "1.0", features = ["derive"] }
bigint = "4"