[package]
name = "utils"
version = "0.1.0"
authors = ["JLer <472102489@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rust-crypto = "0.2"
db-key = "0.0.5"
bigint = "4"

